# rust-mxlink

./: .editorconfig  Cargo.toml  README.md  justfile
examples/: quick_start.rs
src/: init.rs  lib.rs  persistence.rs  utils.rs
src/entity/: invitation.rs  login.rs  message.rs  mod.rs  persistence.rs  session.rs  thread.rs
src/helpers/: encryption.rs  mod.rs
src/helpers/account_data_config/: global.rs  mod.rs  room.rs  utils.rs
src/matrixlink/: media.rs  messaging.rs  mod.rs  reacting.rs  rooms.rs  syncing.rs  threads.rs
src/matrixlink/rooms/: mod.rs  typing_notice.rs
